--- a/kalkulator.html
+++ b/kalkulator.html
@@ -26,9 +26,40 @@
         });
     </script>
     
-    
 	</head>
 	<body>
+	
+		<form class="uk-form">
+			<div class="uk-form-row">
+				<label>Proizvod</label><br />
+					<select class="izracunaj ivm-cena-proizvoda uk-width-1-1">
+						<option value="0">Izaberi</option>
+							<?php foreach($pages->get("template=products")->children() as $item ):?>
+									<option value="<?=$item->cena?>"><?=$item->title;?> - <?=$item->cena?> RSD</option>
+								<?php endforeach;?>
+							</select>
+						</div>
+						<div class="uk-form-row">
+							<label>Duzina</label>
+							<input id="duz" class="izracunaj uk-width-1-1 uk-text-right" type="text" name="duz" value="0" />
+						</div>
+						<div class="uk-form-row">
+							<label>Visina</label>
+							<input id="vis" class="izracunaj uk-width-1-1 uk-text-right" type="text" name="vis" value="0" />
+						</div>
+						<div class="uk-form-row uk-text-right">
+							<span id="kvadratura">0</span>
+							<span>m2</span>
+						</div>
+						<div class="uk-form-row uk-text-right">
+							<span id="ukupno">0</span>
+							<span>RSD</span>
+						</div>
+						<div class="uk-form-row uk-text-right">
+							<a id="izracunaj" class="uk-button uk-button-primary">Izračunaj</a>
+						</div>
+					</form>
+		
 		
 	</body>
 </html>
