--- a/kalkulator-on-click.html
+++ b/kalkulator-on-click.html
@@ -3,7 +3,7 @@
 	<head>
   
 		<meta charset="utf-8">
-		<title>kalkulator</title>
+		<title>kalkulator On Click</title>
     
     <script>
         jQuery(function($) {
