--- a/kalkulator-on-change.html
+++ b/kalkulator-on-change.html
@@ -22,13 +22,24 @@
                 // ukupno
                 $("#ukupno").text(ukupnoC);
             });
+			
+			// Checkbox calculator
+			$('.ivm-calc-value').change(function(){
+			   var total = 0;
+			   var price = 2;
+			   $('.ivm-calc-value:checked').each(function(){
+					total+=price;
+			   });
+			   $('.ivm-calc-total').text(total);
+			});
             
         });
     </script>
     
 	</head>
 	<body>
-	
+		
+		<!-- simple kalkulator -->
 		<form class="uk-form">
 			<div class="uk-form-row">
 				<label>Proizvod</label><br />
@@ -52,6 +63,14 @@
 				<span id="ukupno">0</span>
 				<span>RSD</span>
 			</div>
+		</form>
+		
+		<!-- Chechbox Calculate -->
+		<form class="uk-form">
+			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="1" />
+			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="2" />
+			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="3" />
+			<div class="ivm-calc-total">0</div>
 		</form>
 		
 	</body>
