--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 				<label>Proizvod</label><br />
 				<select class="ivm-cena-proizvoda racunaj uk-width-1-1">
 					<option value="0">Izaberi</option>
+					<option value="200">Proizvod 1</option>
+					<option value="300">Proizvod 2</option>
+					<option value="400">Proizvod 3</option>
 				</select>
 			</div>
 			<div class="uk-form-row">
