--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   
 		<meta charset="utf-8">
 		<title>Kalkulator On Change</title>
+		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
     <script>
         jQuery(function($) {
