--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>Kalkulator On Change</title>
 		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.22/css/uikit.min.css" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
     <script>
@@ -41,7 +42,7 @@
     
 	</head>
 	<body>
-		
+	<div class="uk-container uk-section">
 		<!-- simple kalkulator -->
 		<form class="uk-form">
 			<div class="uk-form-row">
@@ -78,6 +79,6 @@
 			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="3" />
 			<div class="ivm-calc-total">0</div>
 		</form>
-		
+	</div>	
 	</body>
 </html>
