--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<form class="uk-form">
 			<div class="uk-form-row">
 				<label>Proizvod</label><br />
-				<select class="ivm-cena-proizvoda racunaj uk-width-1-1">
+				<select class="uk-select ivm-cena-proizvoda racunaj uk-width-1-1">
 					<option value="0">Izaberi</option>
 					<option value="200">Proizvod 1</option>
 					<option value="300">Proizvod 2</option>
@@ -56,11 +56,11 @@
 			</div>
 			<div class="uk-form-row">
 				<label>Duzina</label>
-				<input id="duz" class="racunaj uk-width-1-1 uk-text-right" type="text" name="duz" value="0" />
+				<input id="duz" class="racunaj uk-input uk-width-1-1 uk-text-right" type="text" name="duz" value="0" />
 			</div>
 			<div class="uk-form-row">
 				<label>Visina</label>
-				<input id="vis" class="racunaj uk-width-1-1 uk-text-right" type="text" name="vis" value="0" />
+				<input id="vis" class="racunaj uk-input uk-width-1-1 uk-text-right" type="text" name="vis" value="0" />
 			</div>
 			<div class="uk-form-row uk-text-right">
 				<span id="kvadratura">0</span>
@@ -72,13 +72,6 @@
 			</div>
 		</form>
 		
-		<!-- Chechbox Calculate -->
-		<form class="uk-form">
-			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="1" />
-			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="2" />
-			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="3" />
-			<div class="ivm-calc-total">0</div>
-		</form>
 	</div>	
 	</body>
 </html>
