--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
 			</div>
 		</form>
 		
+		<!-- Chechbox Calculate -->
+		<form class="uk-form">
+			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="1" />
+			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="2" />
+			<input class="ivm-calc-value" type="checkbox" name="name_array[]" value="3" />
+			<div class="ivm-calc-total">0</div>
+		</form>
+		
 	</div>	
 	</body>
 </html>
